force-app/main/default/objects/Pricing_Rule__c/Pricing_Rule__c.object-meta.xml
<CustomObject>
    <label>Pricing Rule</label>
    <nameField>
        <label>Pricing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>