force-app/main/default/objects/Pricing_Rule__c/fields/Custom_Size_Fee__c.field-meta.xml
<CustomField>
    <fullName>Custom_Size_Fee__c</fullName>
    <description>Fee if no standard match</description>
    <label>Custom Size Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>