force-app/main/default/objects/Pricing_Rule__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pleated</fullName>
            </value>
            <value>
                <fullName>Carbon</fullName>
            </value>
            <value>
                <fullName>HEPA</fullName>
            </value>
            <value>
                <fullName>Washable</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>