force-app/main/default/objects/Pricing_Rule__c/fields/Rush_Order_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rush_Order_Fee__c</fullName>
    <label>Rush Order Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>